--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@ title: jc98w ePortfolio
 description: CS 499 ePortfolio
 
 nav-pages:
-  - title: intro
+  - page-title: Introduction
     url: "/"
-  - title: code_review
+  - page-title: "Code Review"
     url: "/code_review.html"
-  - title: enhancement_one
+  - page-title: "Enhancement One"
     url: "/enhancement_one.html"
-  - title: enhancement_two
+  - page-title: "Enhancement Two"
     url: "/enhancement_two.html"
-  - title: enhancement_three
+  - page-title: "Enhancement Three"
     url: "/enhancement_three.html"
